# genesis-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  VM_SETUP.md  deny.toml  dependabot_report.md  genesis.toml.example  report.md
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: commit-workflow.instructions.md  github-project.instructions.md  testing-quality.instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: audit-phase1.md  audit-phase2.md  audit-phase3.md  github-settings.md  jules-dependabot-prompt.md  rpi4-runner.md  vm-virtualization.md
docs/benchmarks/: initial_reference.md
packaging/arch/: PKGBUILD
scripts/: benchmark.sh  boot-vm.sh  build-arm.sh  ci-test.sh  clean-vms.sh  provision-setup.sh  provision-vm.sh  reset-overlay.sh  setup-build-env.sh  setup-dev-env.sh  status-vms.sh  try-vm.sh  wait-ssh.sh
src/: cli.rs  config.rs  executor.rs  lib.rs  main.rs
src/platform/: arch.rs  debian.rs  mod.rs  raspbian.rs
tests/: cli.rs
tests/e2e/cloud-init/: meta-data  seed.iso  user-data
