[package]
name = "genesis-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
os_info = "3.14.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
